# the-deep-archive

./: .gitignore  AGENTS.md  PLAN.md  README.md  SPEC.md  config.example.toml  pyproject.toml
deeparchive/: __init__.py  __main__.py  action_flavour.py  actions.py  backgrounds.py  config.py  confrontation.py  files.py  flavour.py  gameplay.py  identity.py  logging_setup.py  meta.py  modifiers.py  profiles.py  resolution.py  rng.py
deeparchive/content/: __init__.py  backgrounds.toml  fragments.toml  loader.py  meta_arcs.toml  models.py  relics.toml  scars.toml  themes.toml
deeparchive/db/: __init__.py  connection.py  migrations.py
deeparchive/db/schema/: 0001_initial.sql  0002_active_file_content.sql  0003_backgrounds_and_participation.sql  0004_meta_arc_files.sql  0005_rebalance_file_thresholds.sql  0006_communal_confrontation.sql  __init__.py
deeparchive/irc/: __init__.py  admin.py  backend.py  bot.py  commands.py
tests/: __init__.py  conftest.py  test_action_flavour.py  test_actions.py  test_backend.py  test_backgrounds.py  test_commands.py  test_config.py  test_connection.py  test_content_loader.py  test_content_models.py  test_extras.py  test_files.py  test_flavour.py  test_gameplay.py  test_identity.py  test_meta_arcs.py  test_migrations.py  test_modifiers.py  test_profiles.py  test_resolution.py  test_rng.py  test_schema.py
