[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "the-deep-archive"
version = "0.1.0"
description = "The Deep Archive - a persistent IRC anomaly-investigation game"
requires-python = ">=3.12"
license = { text = "Proprietary" }
readme = "README.md"
dependencies = [
    # The sasl extra installs pure-sasl, which pydle requires before it will
    # initiate authentication when SASL credentials are configured.
    "pydle[sasl]>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
deep-archive = "deeparchive.__main__:main"

[tool.setuptools.packages.find]
include = ["deeparchive*"]

[tool.setuptools.package-data]
# Ship non-Python resources in built wheels, not just editable installs.
# Without these entries, importlib.resources finds the files on disk
# (editable install) but a wheel build omits them.
"deeparchive.db.schema" = ["*.sql"]
"deeparchive.content" = ["*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
